<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/imageCharacter"
        android:layout_width="70dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/name"
        app:layout_constraintStart_toEndOf="@+id/imageCharacter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/speciesCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/species"
        app:layout_constraintStart_toEndOf="@+id/imageCharacter"
        app:layout_constraintTop_toBottomOf="@+id/nameCharacter" />

    <TextView
        android:id="@+id/statusCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/status"
        app:layout_constraintStart_toEndOf="@+id/imageCharacter"
        app:layout_constraintTop_toBottomOf="@+id/speciesCharacter" />

    <TextView
        android:id="@+id/genderCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/gender"
        app:layout_constraintStart_toEndOf="@+id/imageCharacter"
        app:layout_constraintTop_toBottomOf="@+id/statusCharacter" />

</androidx.constraintlayout.widget.ConstraintLayout>