<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nameLocationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_for_all" />

    <TextView
        android:id="@+id/nameLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/typeLocationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type" />

    <TextView
        android:id="@+id/typeLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dimensionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dimension" />

    <TextView
        android:id="@+id/dimension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>