<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/species"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/speciesSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Species"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/status"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/statusSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Status"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/gender"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Gender"
        tools:ignore="HardcodedText" />

</LinearLayout>